# anime_notify

./: Cargo.toml  README.md
src/: bot.rs  cache.rs  config.rs  main.rs  site.rs
