[package]
name = "anime_notify"
version = "0.1.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
anyhow = "1.0.38"
chrono = "0.4.19"
dirs = "3.0.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.17"
reqwest = { version = "0.11.0" }
tokio = { version = "1.2.0", features = ["full"] }
telegram-bot = { git = "https://github.com/Mephistophiles/telegram-bot" }
scraper = "0.12.0"
